--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  align-items: center;
+  background-color: #61dafb;
+  border-radius: 30px;
+  padding: 40px;
+  gap: 20px;
+  margin: 0 auto;
+}
+
+.submit-btn{
+  padding: 10px;
+  background-color: #3e7f91;
+  border-radius: 20px;
+  width: 100px;
+  color: #61dafb;
+  font-weight: 700;
+}
